1.重构协议